# open-italian-db-with-anki

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  DATA_SOURCES.md  LICENSE  README.md  Taskfile.yml  project_spec.md  pyproject.toml
data-licenses/: itwac.txt  morph-it.txt  tatoeba.txt  wiktextract.txt
src/italian_anki/: articles.py  cli.py  derivation.py  download.py  enums.py  normalize.py  tags.py  verify.py
src/italian_anki/db/: __init__.py  connection.py  schema.py
src/italian_anki/importers/: __init__.py  itwac.py  morphit.py  tatoeba.py  verb_irregularity.py  wiktextract.py
src/italian_db/: __init__.py  articles.py  cli.py  derivation.py  download.py  enums.py  normalize.py  tags.py  verify.py
src/italian_db/db/: __init__.py  schema.py
src/italian_db/importers/: __init__.py  itwac.py  morphit.py  tatoeba.py  verb_irregularity.py  wiktextract.py
tests/: test_articles.py  test_db.py  test_derivation.py  test_itwac_importer.py  test_morphit_importer.py  test_normalize.py  test_placeholder.py  test_tags.py  test_tatoeba_importer.py  test_verify.py  test_wiktextract_importer.py
