[project]
name = "italian-anki"
version = "0.1.0"
description = "Generate Anki flashcard decks for learning Italian from linguistic databases"
requires-python = ">=3.13"
dependencies = [
    "genanki>=0.13",
    "requests>=2.31",
    "sqlalchemy>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "pre-commit>=3.6",
    "ruff>=0.8",
    "pyright>=1.1",
]

[project.scripts]
italian-anki = "italian_anki.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/italian_anki"]

[tool.ruff]
target-version = "py313"
src = ["src", "tests"]
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "S",      # flake8-bandit (security)
    "N",      # pep8-naming
    "PT",     # flake8-pytest-style
    "PERF",   # perflint
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "S101",   # assert used (fine in tests)
]

[tool.ruff.lint.isort]
known-first-party = ["italian_anki"]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "strict"
include = ["src", "tests"]
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
